--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@types/html2canvas": "^1.0.0",
+    "@types/jspdf": "^2.0.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -44,8 +46,10 @@
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.12.1",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "input-otp": "1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
